--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>lessandmore</title>
-    <link rel=stylesheet type=text/css href='static/style.css'>
+    <link rel=stylesheet type=text/css href='style.css'>
     <script type="text/javascript" src="popup.js"></script>
   </head>
   <body>
